fix(fonts): move Google font imports to index.html to avoid LESS ENOENT

--- a/fe-designer-dragdrop/src/styles.less
+++ b/fe-designer-dragdrop/src/styles.less
@@ -4,7 +4,7 @@
 @import 'quill/dist/quill.snow.css';
 @import './styles/quill-list-styles.css';
 /* Google webfonts for quill custom font whitelist */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,400&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Lato:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,400;0,600;0,700;1,400&family=Poppins:ital,wght@0,400;0,600;0,700;1,400&display=swap');
+/* Webfonts loaded via index.html <link> tags to avoid LESS trying to resolve them */
 
 // ============================================
 // GLOBAL STYLES
