Make cel editor bigger.

--- a/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
+++ b/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
@@ -25,6 +25,7 @@
                    [style.flexDirection]="'column'"
                    [style.justifyContent]="getCellVAlignFlex(rowIndex,colIndex)"
                    [style.textAlign]="getCellHAlign(rowIndex,colIndex)"
+                   [style.overflow]="'auto'"
                    [innerHTML]="getCellContent(rowIndex, colIndex)"></div>
             </td>
           }
