feat: add Zoom 1:1 (actual size) mode

--- a/fe-designer-dragdrop/src/app/layout/menu-bar/menu-bar.html
+++ b/fe-designer-dragdrop/src/app/layout/menu-bar/menu-bar.html
@@ -92,6 +92,13 @@
           data-testid="menu-view-zoom-height">
           <span>Zoom To Height</span>
         </button>
+        <button 
+          class="dropdown-item" 
+          (click)="handleZoom('actual')" 
+          [class.active]="canvasZoomMode() === 'actual'"
+          data-testid="menu-view-zoom-actual">
+          <span>Zoom 1:1 (Actual Size)</span>
+        </button>
       </div>
     }
   </div>
