--- a/fe-designer-dragdrop/src/app/layout/menu-bar/menu-bar.html
+++ b/fe-designer-dragdrop/src/app/layout/menu-bar/menu-bar.html
@@ -99,6 +99,12 @@
           data-testid="menu-view-zoom-actual">
           <span>Zoom 1:1 (Actual Size)</span>
         </button>
+        <button 
+          class="dropdown-item" 
+          (click)="openCalibration()" 
+          data-testid="menu-view-calibrate">
+          <span>Calibrate Screen...</span>
+        </button>
       </div>
     }
   </div>
