--- a/fe-designer-dragdrop/src/app/designer/canvas/canvas.html
+++ b/fe-designer-dragdrop/src/app/designer/canvas/canvas.html
@@ -9,7 +9,7 @@
   <div 
     class="a4-sheet-wrapper"
     [style.width.px]="A4_WIDTH_MM * MM_TO_PX * canvasScale() * screenCalibrationScale()"
-    [style.height.px]="A4_HEIGHT_MM * MM_TO_PX * canvasScale() * screenCalibrationScale()">
+    [style.height.px]="A4_HEIGHT_MM * MM_TO_PX * canvasScale() * screenCalibrationScale()"
     <div class="a4-sheet" 
       #sheet
       [style.width.mm]="A4_WIDTH_MM"
