--- a/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
+++ b/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
@@ -3,7 +3,7 @@
 
 <div class="table-element-container">
   <table class="element-table" aria-label="Table element"
-         [style.border]="(element.properties?.['tableBorderWidth']||0) + 'px ' + (element.properties?.['tableBorderStyle']||'solid') + ' ' + (element.properties?.['tableBorderColor']||'#000000')" >
+         [style.border]="(element.properties['tableBorderWidth']||0) + 'px ' + (element.properties['tableBorderStyle']||'solid') + ' ' + (element.properties['tableBorderColor']||'#000000')" >
     <tbody>
       @for (rowSize of rowSizes; track $index; let rowIndex = $index) {
         <tr [style.height.mm]="element.height * rowSize">
