Loading saved files starts to work!

--- a/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
+++ b/fe-designer-dragdrop/src/app/designer/table-element/table-element.html
@@ -13,10 +13,7 @@
               (click)="onCellClick($event, rowIndex, colIndex)"
               (contextmenu)="onCellContextMenu($event, rowIndex, colIndex)"
               [class.selected]="isCellSelected(rowIndex, colIndex)"
-              [style.padding-top.mm]="getCellPadding(rowIndex,colIndex).top"
-              [style.padding-right.mm]="getCellPadding(rowIndex,colIndex).right"
-              [style.padding-bottom.mm]="getCellPadding(rowIndex,colIndex).bottom"
-              [style.padding-left.mm]="getCellPadding(rowIndex,colIndex).left"
+              [style.padding]="getCellPaddingString(rowIndex,colIndex)"
               [style.text-align]="getCellHAlign(rowIndex,colIndex)"
               [style.vertical-align]="getCellVAlign(rowIndex,colIndex)"
               [style.border]="getCellBorder(rowIndex,colIndex)"
